# ebook-collector

./: .gitignore  LICENSE  Pipfile  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python_project.yaml  test.yaml
backend/: Dockerfile  env  main.py
backend/database/: db.py  schemas.py
backend/handlers/: auth_handlers.py  lib_handlers.py  user_handlers.py
backend/routers/: auth.py  library.py  users.py
backend/tests/: test_library.py  test_users.py  utils.py
backend/utils/: checks.py  hashing.py  oauth2.py  token.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  NavBar.css  NavBar.js  NavBurger.js  index.css
frontend/src/api/: axios.js
frontend/src/components/: AboutCards.css  AboutCards.js  ArticlesList.js  BookCover.js  ConnectionTest.js  CoursesList.css  CoursesList.js  Footer.js  FooterStyles.js  ImageBG.css  ImageBG.js  Navbar.css  Navbar.js  NavbarHome.js  RequireAuth.js  Searchbar.css  Searchbar.js  SearchbarNav.css  SearchbarNav.js  VideoBG.css  VideoBG.js  article-content.js  deleteList.js  download.css  download.js  editList.css  editList.js  preview.css  preview.js  searchbar.css  unapprovedList.js
frontend/src/components/background/: background.css  homeBG.jsx
frontend/src/components/button/: button.js
frontend/src/components/toast/: toast.js
frontend/src/config/: allowedOrigins.js
frontend/src/context/: AuthProvider.js
frontend/src/pages/: AboutPage.js  Aboutpage.js  AdminApprove.js  AdminDelete.js  AdminEdit.css  AdminEdit.js  AdminPage.css  AdminPage.js  ApprovePage.js  ArticlePage.css  ArticlePage.js  Articlepage.css  Articlepage.js  ArticlesListPage.css  ArticlesListPage.js  CoursesListPage.js  DeletePage.js  EditPage.css  EditPage.js  HomePage.js  Homepage.js  LoginPage.css  LoginPage.js  Loginpage.css  Loginpage.js  NotFoundPage.js  SearchPage.css  SearchPage.js  UploadDelete.js  UploadEdit.js  UploadPage.css  UploadPage.js  UploadPdf.css  UploadPdf.js
frontend/src/routes/: Aboutpage.js  AdminApprove.js  AdminPage.js  Articlepage.js  ArticlesListPage.js  CoursesListPage.js  DeletePage.js  EditPage.css  Homepage.js  Loginpage.js  UploadPage.css
