[project]
name = ""
version = ""
description = ""
authors = [
    {name = "NotJL", email = "58279268+notjl@users.noreply.github.com"},
]
dependencies = [
    "fastapi[all]",
    "pydantic[email]",
    "passlib",
    "python-jose[cryptography]",
    "motor",
    "argon2-cffi",
    "PyMuPDF>=1.20.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.scripts]
_.env_file = ".env"
server.cmd = "uvicorn backend.main:app --reload"
black = "black backend"
pytest = "pytest backend"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "flake8>=5.0.4",
    "pytest>=7.1.3",
    "ptpython>=3.0.20",
]

[tool.black]
line-length = 79

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
